# AR

./: .coverage  README.md  cli.py  debug_threats.py  profile.stats  pyproject.toml
.github/workflows/: template-validation.yml
config/: assets.csv  config_ebios.yaml  measures.csv  objectives.csv  pme_defaults.yaml  risk_sources.csv  settings.yaml  stakeholders.csv  threats.csv
config/referentials/: HDS_v2024-05-10.csv  PCI_DSS_v4_2024-03-30.csv  RGPD_art32_v2023-12-01.csv
ebiosrm_core/: __init__.py  cli.py  exporters.py  generator.py  loader.py  models.py
ebiosrm_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
exports/: ebios_risk_assessment.json
schema/: ebios_schema.json
scripts/: check_updates.py  config_manager.py  fix_excel_formulas.py  fix_generator.py  generate_template.py  generate_template.py.backup  run_generation.py  sync_json_excel.py  test_minimal.py  visualize_template.py
templates/: ebios_risk_assessment_FR.xlsx  ~$ebios_risk_assessment_FR.xlsx
tests/: conftest.py  test_ebios_features.py  test_full_flow.py  test_measures.py  test_template_validation.py  test_validation_dropdown.py
